5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4422/executions/1800_2565.log
== TEST (2019-06-10 08:47:11) 
-- CODE:
mf = array(eval(input("media final: ")))
pr = array(eval(input("presenca: ")))
ch = array(eval(input("carga horaria: ")))

res = zeros(3, dtype = int)

for i in range(size(mf)):
	if(mf[i] >= 5)
		res[0] = res[0] + 1
	elif(mf[i] < 5):
		res[1] = res[1] + 1

for e in range(size(pr)):
	if(pr[i] <= 0.75 * ch):
		res[0] = res[0] + 1
	elif(pr[i] > 0.75 * ch):
		res[2] = res[2] + 1
print(res)
-- ERROR:
File "XXXX", line 8
    if(mf[i] >= 5)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 08:47:50) 
-- CODE:
mf = array(eval(input("media final: ")))
pr = array(eval(input("presenca: ")))
ch = array(eval(input("carga horaria: ")))

res = zeros(3, dtype = int)

for i in range(size(mf)):
	if(mf[i] > 5)
		res[0] = res[0] + 1
	elif(mf[i] < 5):
		res[1] = res[1] + 1

for e in range(size(pr)):
	if(pr[i] <= 0.75 * ch):
		res[0] = res[0] + 1
	elif(pr[i] > 0.75 * ch):
		res[2] = res[2] + 1
print(res)
-- ERROR:
File "XXXX", line 8
    if(mf[i] > 5)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 08:48:39) 
-- CODE:
mf = array(eval(input("media final: ")))
pr = array(eval(input("presenca: ")))
ch = array(eval(input("carga horaria: ")))

c = 5
res = zeros(3, dtype = int)

for i in range(size(mf)):
	if(mf[i] >= c)
		res[0] = res[0] + 1
	elif(mf[i] < c):
		res[1] = res[1] + 1

for e in range(size(pr)):
	if(pr[i] <= 0.75 * ch):
		res[0] = res[0] + 1
	elif(pr[i] > 0.75 * ch):
		res[2] = res[2] + 1
print(res)
-- ERROR:
File "XXXX", line 9
    if(mf[i] >= c)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 08:49:00) 
-- CODE:
mf = array(eval(input("media final: ")))
pr = array(eval(input("presenca: ")))
ch = array(eval(input("carga horaria: ")))

c = 5
res = zeros(3, dtype = int)

for i in range(size(mf)):
	if(mf[i]>=c)
		res[0] = res[0] + 1
	elif(mf[i] < c):
		res[1] = res[1] + 1

for e in range(size(pr)):
	if(pr[i] <= 0.75 * ch):
		res[0] = res[0] + 1
	elif(pr[i] > 0.75 * ch):
		res[2] = res[2] + 1
print(res)
-- ERROR:
File "XXXX", line 9
    if(mf[i]>=c)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 09:16:25) 
-- CODE:
from numpy import *
mf = array(eval(input("media final: ")))
pr = array(eval(input("presenca: ")))
ch = array(eval(input("carga horaria: ")))

c = 5
res = zeros(3, dtype = int)

for i in range(size(mf)):
	if(mf[i]>=c)
		res[0] = res[0] + 1
	elif(mf[i] < c):
		res[1] = res[1] + 1

for e in range(size(pr)):
	if(pr[i] <= 0.75 * ch):
		res[0] = res[0] + 1
	elif(pr[i] > 0.75 * ch):
		res[2] = res[2] + 1
print(res)
-- ERROR:
File "XXXX", line 10
    if(mf[i]>=c)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 09:16:42) 
-- CODE:
from numpy import *
mf = array(eval(input("media final: ")))
pr = array(eval(input("presenca: ")))
ch = array(eval(input("carga horaria: ")))

c = 5
res = zeros(3, dtype = int)

for i in range(size(mf)):
	if(mf[i]>=c)
		res[0] = res[0] + 1
	elif(mf[i] < c):
		res[1] = res[1] + 1

for e in range(size(pr)):
	if(pr[i] <= 0.75 * ch):
		res[0] = res[0] + 1
	elif(pr[i] > 0.75 * ch):
		res[2] = res[2] + 1
print(res)
-- ERROR:
File "XXXX", line 10
    if(mf[i]>=c)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 09:17:23) 
-- CODE:
from numpy import *
mf = array(eval(input("media final: ")))
pr = array(eval(input("presenca: ")))
ch = array(eval(input("carga horaria: ")))

c = 5
res = zeros(3, dtype = int)

for i in range(size(mf)):
	if(mf[i]>=c)
	res[0] = res[0] + 1
	elif(mf[i] < c):
		res[1] = res[1] + 1

for e in range(size(pr)):
	if(pr[i] <= 0.75 * ch):
		res[0] = res[0] + 1
	elif(pr[i] > 0.75 * ch):
		res[2] = res[2] + 1
print(res)
-- ERROR:
File "XXXX", line 10
    if(mf[i]>=c)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 09:19:17) 
-- CODE:
from numpy import *
mf = array(eval(input("media final: ")))
pr = array(eval(input("presenca: ")))
ch = array(eval(input("carga horaria: ")))

res = zeros(3, dtype = int)

for i in range(size(mf)):
	if(mf[i]>=c)
		res[0] = res[0] + 1
	elif(mf[i] < c):
		res[1] = res[1] + 1

for e in range(size(pr)):
	if(pr[i] <= 0.75 * ch):
		res[0] = res[0] + 1
	elif(pr[i] > 0.75 * ch):
		res[2] = res[2] + 1
print(res)
-- ERROR:
File "XXXX", line 9
    if(mf[i]>=c)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 09:19:21) 
-- CODE:
from numpy import *
mf = array(eval(input("media final: ")))
pr = array(eval(input("presenca: ")))
ch = array(eval(input("carga horaria: ")))

res = zeros(3, dtype = int)

for i in range(size(mf)):
	if(mf[i]>=c)
		res[0] = res[0] + 1
	elif(mf[i] < c):
		res[1] = res[1] + 1

for e in range(size(pr)):
	if(pr[i] <= 0.75 * ch):
		res[0] = res[0] + 1
	elif(pr[i] > 0.75 * ch):
		res[2] = res[2] + 1
print(res)
-- ERROR:
File "XXXX", line 9
    if(mf[i]>=c)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 09:19:22) 
-- CODE:
from numpy import *
mf = array(eval(input("media final: ")))
pr = array(eval(input("presenca: ")))
ch = array(eval(input("carga horaria: ")))

res = zeros(3, dtype = int)

for i in range(size(mf)):
	if(mf[i]>=c)
		res[0] = res[0] + 1
	elif(mf[i] < c):
		res[1] = res[1] + 1

for e in range(size(pr)):
	if(pr[i] <= 0.75 * ch):
		res[0] = res[0] + 1
	elif(pr[i] > 0.75 * ch):
		res[2] = res[2] + 1
print(res)
-- ERROR:
File "XXXX", line 9
    if(mf[i]>=c)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 09:19:22) 
-- CODE:
from numpy import *
mf = array(eval(input("media final: ")))
pr = array(eval(input("presenca: ")))
ch = array(eval(input("carga horaria: ")))

res = zeros(3, dtype = int)

for i in range(size(mf)):
	if(mf[i]>=c)
		res[0] = res[0] + 1
	elif(mf[i] < c):
		res[1] = res[1] + 1

for e in range(size(pr)):
	if(pr[i] <= 0.75 * ch):
		res[0] = res[0] + 1
	elif(pr[i] > 0.75 * ch):
		res[2] = res[2] + 1
print(res)
-- ERROR:
File "XXXX", line 9
    if(mf[i]>=c)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 09:22:31) 
-- CODE:
from numpy import *
mf = array(eval(input("media final: ")))
pr = array(eval(input("presenca: ")))
ch = array(eval(input("carga horaria: ")))

res = zeros(3, dtype = int)

for e in range(size(mf)):
-- ERROR:
File "XXXX", line 9
    
                             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 09:22:42) 
-- CODE:
from numpy import *
mf = array(eval(input("media final: ")))
pr = array(eval(input("presenca: ")))
ch = array(eval(input("carga horaria: ")))

res = zeros(3, dtype = int)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 09:25:53) 
-- CODE:
from numpy import *
#so_as_entradas
mf = array(eval(input("media final: ")))
pr = array(eval(input("presenca: ")))
ch = array(eval(input("carga horaria: ")))
#vetor que será a saída
res = zeros(3, dtype = int)

for i in range(size(mf)):
	if(mf[i] > 5):
		res[0] = res[0] + 1
	elif(mf[i] == 5):
		res[0] = res[0] + 1
	eli(mf[i] < 5):
		res[1] = res[1] + 1
-- ERROR:
File "XXXX", line 14
    eli(mf[i] < 5):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 09:26:10) 
-- CODE:
from numpy import *
#so_as_entradas
mf = array(eval(input("media final: ")))
pr = array(eval(input("presenca: ")))
ch = array(eval(input("carga horaria: ")))
#vetor que será a saída
res = zeros(3, dtype = int)

for i in range(size(mf)):
	if(mf[i] > 5):
		res[0] = res[0] + 1
	elif(mf[i] == 5):
		res[0] = res[0] + 1
	elif(mf[i] < 5):
		res[1] = res[1] + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 09:30:01) 
-- CODE:
from numpy import *
#so_as_entradas
mf = array(eval(input("media final: ")))
pr = array(eval(input("presenca: ")))
ch = array(eval(input("carga horaria: ")))
#vetor que será a saída
res = zeros(3, dtype = int)

for i in range(size(mf)):
	if(mf[i] > 5):
		res[0] = res[0] + 1
	elif(mf[i] == 5):
		res[0] = res[0] + 1
	elif(mf[i] < 5):
		res[1] = res[1] + 1
for e in range(size(pr)):
	if(pr[i] < 0.75 * ch and mf[i] >= 5):
		res[0] = res[0] + 1
	elif(pr[i] == 0.75 * ch and mf[i] > = 5):
		res[0] = res[0] + 1
	elif(pr[i] > 0.75 * ch):
		res[2] = res[2] + 1
		
-- ERROR:
File "XXXX", line 19
    elif(pr[i] == 0.75 * ch and mf[i] > = 5):
                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 09:30:13) 
-- CODE:
from numpy import *
#so_as_entradas
mf = array(eval(input("media final: ")))
pr = array(eval(input("presenca: ")))
ch = array(eval(input("carga horaria: ")))
#vetor que será a saída
res = zeros(3, dtype = int)

for i in range(size(mf)):
	if(mf[i] > 5):
		res[0] = res[0] + 1
	elif(mf[i] == 5):
		res[0] = res[0] + 1
	elif(mf[i] < 5):
		res[1] = res[1] + 1
for e in range(size(pr)):
	if(pr[i] < 0.75 * ch and mf[i] >= 5):
		res[0] = res[0] + 1
	elif(pr[i] == 0.75 * ch and mf[i] >= 5):
		res[0] = res[0] + 1
	elif(pr[i] > 0.75 * ch):
		res[2] = res[2] + 1
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 09:30:41) 
-- CODE:
from numpy import *
#so_as_entradas
mf = array(eval(input("media final: ")))
pr = array(eval(input("presenca: ")))
ch = array(eval(input("carga horaria: ")))
#vetor que será a saída
res = zeros(3, dtype = int)

for i in range(size(mf)):
	if(mf[i] > 5):
		res[0] = res[0] + 1
	elif(mf[i] == 5):
		res[0] = res[0] + 1
	elif(mf[i] < 5):
		res[1] = res[1] + 1
for e in range(size(pr)):
	if(pr[i] < 0.75 * ch and mf[i] >= 5):
		res[0] = res[0] + 1
	elif(pr[i] == 0.75 * ch and mf[i] >= 5):
		res[0] = res[0] + 1
	elif(pr[i] > 0.75 * ch):
		res[2] = res[2] + 1
print(res)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 09:31:04) 
-- CODE:
from numpy import *
#so_as_entradas
mf = array(eval(input("media final: ")))
pr = array(eval(input("presenca: ")))
ch = array(eval(input("carga horaria: ")))
#vetor que será a saída
res = zeros(3, dtype = int)

for i in range(size(mf)):
	if(mf[i] > 5):
		res[0] = res[0] + 1
	elif(mf[i] == 5):
		res[0] = res[0] + 1
	elif(mf[i] < 5):
		res[1] = res[1] + 1
for e in range(size(pr)):
	if(pr[i] < 0.75 * ch and mf[i] >= 5):
		res[0] = res[0] + 1
	elif(pr[i] == 0.75 * ch and mf[i] >= 5):
		res[0] = res[0] + 1
	elif(pr[i] > 0.75 * ch):
		res[2] = res[2] + 1
print(res)
		
-- EXECUTION TIME:
1.12146
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[10  0  0]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[7 0 7]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[ 9  1 10]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 09:31:25) 
-- CODE:
from numpy import *
#so_as_entradas
mf = array(eval(input("media final: ")))
pr = array(eval(input("presenca: ")))
ch = array(eval(input("carga horaria: ")))
#vetor que será a saída
res = zeros(3, dtype = int)

for i in range(size(mf)):
	if(mf[i] >= 5):
		res[0] = res[0] + 1
	elif(mf[i] < 5):
		res[1] = res[1] + 1
for e in range(size(pr)):
	if(pr[i] < 0.75 * ch and mf[i] >= 5):
		res[0] = res[0] + 1
	elif(pr[i] == 0.75 * ch and mf[i] >= 5):
		res[0] = res[0] + 1
	elif(pr[i] > 0.75 * ch):
		res[2] = res[2] + 1
print(res)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 09:31:41) 
-- CODE:
from numpy import *
#so_as_entradas
mf = array(eval(input("media final: ")))
pr = array(eval(input("presenca: ")))
ch = array(eval(input("carga horaria: ")))
#vetor que será a saída
res = zeros(3, dtype = int)

for i in range(size(mf)):
	if(mf[i] >= 5):
		res[0] = res[0] + 1
	elif(mf[i] < 5):
		res[1] = res[1] + 1
for e in range(size(pr)):
	if(pr[i] <= 0.75 * ch and mf[i] >= 5):
		res[0] = res[0] + 1
	elif(pr[i] > 0.75 * ch):
		res[2] = res[2] + 1
print(res)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 09:34:26) 
-- CODE:
from numpy import *
#so_as_entradas
mf = array(eval(input("media final: ")))
pr = array(eval(input("presenca: ")))
ch = array(eval(input("carga horaria: ")))
#vetor que será a saída
res = zeros(3, dtype = int)

for i in range(size(mf)):
	if(mf[i] < 5):
		res[1] = res[1] + 1
for e in range(size(pr)):
	if(pr[i] <= 0.75 * ch and mf[i] >= 5):
		res[0] = res[0] + 1
	elif(pr[i] > 0.75 * ch):
		res[2] = res[2] + 1
print(res)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:10:51) 
-- CODE:
from numpy import *
#so_as_entradas
mf = array(eval(input("media final: ")))
pr = array(eval(input("presenca: ")))
ch = array(eval(input("carga horaria: ")))
#vetor que será a saída
res = zeros(3, dtype = int)
fl = 0.75 * ch

for i in range(size(mf)):
	if(mf[i]<5):
		res[1] = res[1] + 1
for e in range(size(pr)):
	if(pr[i] <= fl and mf[i] >= 5):
		res[0] = res[0] + 1
	elif(pr[i] > fl and mf[i] >= 5):
		res[2] = res[2] + 1
print(res)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:11:54) 
-- CODE:
from numpy import *
#so_as_entradas
mf = array(eval(input("media final: ")))
pr = array(eval(input("presenca: ")))
ch = array(eval(input("carga horaria: ")))
#vetor que será a saída
res = zeros(3, dtype = int)
fl = 0.75 * ch

for i in range(size(mf)):
	if(mf[i]<5):
		res[1] = res[1] + 1
for e in range(size(pr)):
	if(pr[i] <= fl and mf[i] >= 5):
		res[0] = res[0] + 1
	elif(pr[i] > fl and mf[i] >= 5):
		res[2] = res[2] + 1
	print(res)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:12:36) 
-- CODE:
from numpy import *
#so_as_entradas
mf = array(eval(input("media final: ")))
pr = array(eval(input("presenca: ")))
ch = array(eval(input("carga horaria: ")))
#vetor que será a saída
res = zeros(3, dtype = int)
fl = 0.75 * ch

for i in range(size(mf)):
	if(mf[i]<5):
		res[1] = res[1] + 1

for e in range(size(pr)):
	if(pr[e] <= fl and mf[i] >= 5):
		res[0] = res[0] + 1
	elif(pr[e] > fl and mf[i] >= 5):
		res[2] = res[2] + 1
print(res)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 18:12:49) 
-- CODE:
from numpy import *
#so_as_entradas
mf = array(eval(input("media final: ")))
pr = array(eval(input("presenca: ")))
ch = array(eval(input("carga horaria: ")))
#vetor que será a saída
res = zeros(3, dtype = int)
fl = 0.75 * ch

for i in range(size(mf)):
	if(mf[i]<5):
		res[1] = res[1] + 1

for e in range(size(pr)):
	if(pr[e] <= fl and mf[i] >= 5):
		res[0] = res[0] + 1
	elif(pr[e] > fl and mf[i] >= 5):
		res[2] = res[2] + 1
print(res)
-- EXECUTION TIME:
1.29661
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[4 0 1]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[3 0 4]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 5]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:17:07) 
-- CODE:
from numpy import *
#so_as_entradas
mf = array(eval(input("media final: ")))
pr = array(eval(input("presenca: ")))
ch = array(eval(input("carga horaria: ")))
#vetor que será a saída
res = zeros(3, dtype = int)
fl = 0.75 * ch

for i in range(size(mf)):
	if(mf[i]<5):
		res[1] = res[1] + 1

for e in range(size(pr)):
	if(pr[e] <= fl and mf[i] >= 5):
		res[0] = res[0] + 1
	elif(pr[e] > fl and mf[i] >= 5):
		res[2] = res[2] + 1
print(res)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:17:28) 
-- CODE:
from numpy import *
#so_as_entradas
mf = array(eval(input("media final: ")))
pr = array(eval(input("presenca: ")))
ch = array(eval(input("carga horaria: ")))
#vetor que será a saída
res = zeros(3, dtype = int)
fl = 0.75 * ch

for i in range(size(mf)):
	if(mf[i]<5):
		res[1] = res[1] + 1

for e in range(size(pr)):
	if(pr[e] <= fl and mf[i] >= 5):
		res[0] = res[0] + 1
	elif(pr[e] > fl and mf[i] >= 5):
		res[2] = res[2] + 1
print(res)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 18:17:44) 
-- CODE:
from numpy import *
#so_as_entradas
mf = array(eval(input("media final: ")))
pr = array(eval(input("presenca: ")))
ch = array(eval(input("carga horaria: ")))
#vetor que será a saída
res = zeros(3, dtype = int)
fl = 0.75 * ch

for i in range(size(mf)):
	if(mf[i]<5):
		res[1] = res[1] + 1

for e in range(size(pr)):
	if(pr[e] <= fl and mf[i] >= 5):
		res[0] = res[0] + 1
	elif(pr[e] > fl and mf[i] >= 5):
		res[2] = res[2] + 1
print(res)
-- EXECUTION TIME:
1.19914
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[4 0 1]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[3 0 4]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 5]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:07:25) 
-- CODE:
from numpy import *
#so_as_entradas
mf = array(eval(input("media final: ")))
pr = array(eval(input("presenca: ")))
ch = array(eval(input("carga horaria: ")))
#vetor que será a saída
res = zeros(3, dtype = int)
fl = 0.75 * ch

for i in range(size(mf)):
	if(mf[i]<5):
		res[1] = res[1] + 1

for e in range(size(pr)):
	if(pr[e] <= fl and mf[i] >= 5):
		res[0] = res[0] + 1
	elif(pr[e] > fl and mf[i] >= 5):
		res[2] = res[2] + 1
print(res)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 10:07:41) 
-- CODE:
from numpy import *
#so_as_entradas
mf = array(eval(input("media final: ")))
pr = array(eval(input("presenca: ")))
ch = array(eval(input("carga horaria: ")))
#vetor que será a saída
res = zeros(3, dtype = int)
fl = 0.75 * ch

for i in range(size(mf)):
	if(mf[i]<5):
		res[1] = res[1] + 1

for e in range(size(pr)):
	if(pr[e] <= fl and mf[i] >= 5):
		res[0] = res[0] + 1
	elif(pr[e] > fl and mf[i] >= 5):
		res[2] = res[2] + 1
print(res)
-- EXECUTION TIME:
1.28313
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[4 0 1]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[3 0 4]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 5]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:11:00) 
-- CODE:
from numpy import *
#so_as_entradas
mf = array(eval(input("media final: ")))
pr = array(eval(input("presenca: ")))
ch = array(eval(input("carga horaria: ")))
#vetor que será a saída
res = zeros(3, dtype = int)
fl = 0.75 * ch

for i in range(size(mf)):
	if(mf[i]<5):
		res[1] = res[1] + 1

for e in range(size(pr)):
	if(pr[e] <= fl and mf[i] >= 5):
		res[0] = res[0] + 1
	
print(res)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:11:07) 
-- CODE:
from numpy import *
#so_as_entradas
mf = array(eval(input("media final: ")))
pr = array(eval(input("presenca: ")))
ch = array(eval(input("carga horaria: ")))
#vetor que será a saída
res = zeros(3, dtype = int)
fl = 0.75 * ch

for i in range(size(mf)):
	if(mf[i]<5):
		res[1] = res[1] + 1

for e in range(size(pr)):
	if(pr[e] <= fl and mf[i] >= 5):
		res[0] = res[0] + 1
	
print(res)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:11:56) 
-- CODE:
from numpy import *
#so_as_entradas
mf = array(eval(input("media final: ")))
pr = array(eval(input("presenca: ")))
ch = array(eval(input("carga horaria: ")))
#vetor que será a saída
res = zeros(3, dtype = int)
fl = 0.75 * ch

for i in range(size(mf)):
	if(mf[i]<5):
		res[1] = res[1] + 1

for e in range(size(pr)):
	if(pr[e] <= fl and mf[i] >= 5):
		res[0] = res[0] + 1
	elif(pr[e] > fl):
		res[2] = res[2] + 1
print(res)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 10:12:07) 
-- CODE:
from numpy import *
#so_as_entradas
mf = array(eval(input("media final: ")))
pr = array(eval(input("presenca: ")))
ch = array(eval(input("carga horaria: ")))
#vetor que será a saída
res = zeros(3, dtype = int)
fl = 0.75 * ch

for i in range(size(mf)):
	if(mf[i]<5):
		res[1] = res[1] + 1

for e in range(size(pr)):
	if(pr[e] <= fl and mf[i] >= 5):
		res[0] = res[0] + 1
	elif(pr[e] > fl):
		res[2] = res[2] + 1
print(res)
-- EXECUTION TIME:
1.08867
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[4 0 1]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[3 0 4]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 5]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:15:25) 
-- CODE:
from numpy import *
m = array(eval(input("m: ")))
p = array(eval(input("p: ")))
c = array(eval(input("c: ")))

x = zeros(3, dtype = int)

for i in range(size(m)):
	if(m[i] >= 5 and p[i] >= (0.75 * c)):
		x[0] = x[0] + 1
	elif(m[i] < 5):
		x[1] = x[1] + 1
	elif(p[i] < (0.75 * c)):
		x[2] = x[2] + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 10:15:37) 
-- CODE:
from numpy import *
m = array(eval(input("m: ")))
p = array(eval(input("p: ")))
c = array(eval(input("c: ")))

x = zeros(3, dtype = int)

for i in range(size(m)):
	if(m[i] >= 5 and p[i] >= (0.75 * c)):
		x[0] = x[0] + 1
	elif(m[i] < 5):
		x[1] = x[1] + 1
	elif(p[i] < (0.75 * c)):
		x[2] = x[2] + 1
print(x)
-- EXECUTION TIME:
1.04081
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
